src/main/webapp/resources/css/default-theme.css
body {
    background: #f5f5f5 url("../img/bg-gray.jpg") repeat top left;
}
.container-content {
    position: relative;
    min-height: 530px;
    width: 970px;
    background-color: #ffffff;
    padding: 20px;
    padding-top: 60px;
    
    /* Border radius and box shadow */
    -webkit-border-bottom-right-radius: 10px;
        -moz-border-radius-bottomright: 10px;
            border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
        -moz-border-radius-bottomleft: 10px;
            border-bottom-left-radius: 10px;
            
    -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.2);
       -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.2);
            box-shadow: 0px 0px 5px rgba(0,0,0,.2);
}
#footer {
    width: 970px;
    margin: 10px 100px;
}
#cc-license {
    text-align: right;
}
.page-paragraph {
    margin-bottom: 80px;
}
.thumbnails {
    cursor: pointer;
}
.popover {
    min-height: 100px;
    max-height: 250px;
    width: auto;
    min-width: 220px;
    max-width: 350px;
}
.episode-btn-align-right {
    text-align: right;
}
#video-player {
    margin: 50px auto;
}
table.table-sorter th div.sortArrow {
	width: 11px;
	height: 6px;
	display: inline-block;
	margin-left: 5px;
	vertical-align: 2px;
	position: relative;
}

table.table-sorter th div.sortArrow div.sortArrowAscending,
table.table-sorter th div.sortArrow div.sortArrowDescending {
	position: absolute;
	display: none;
	width: 11px;
	height: 6px;
}

table.table-sorter th div.sortArrow div.sortArrowAscending {
	background: url('../img/arrow_asc.png');
}

table.table-sorter th div.sortArrow div.sortArrowDescending {
	background: url('../img/arrow_desc.png') no-repeat;
}
table.subtitle-table {
    margin-left: 0px;
    margin-right: 0px;
}
.flow-container {
    min-height: 400px;
}
.movie-img {
    width: 160px;
    height: 200px;
}

/* Responsive CSS fix */
@media (max-width: 979px) {
    .container-content {
        padding-top: 20px;
    }
    .navbar-text.pull-right {
        float: none;
        padding-left: 5px;
        padding-right: 5px;
    }
    #cc-license {
        text-align: left;
    }
    .popover {
        min-height: 100px;
        max-height: 340px;
        width: 220px;
    }
}

